Fixed error in the normal cover finding.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4377,6 +4377,7 @@ OpenAssetsAtExit=/Game/AdvancedAI/Decorator_RemainingHealth.Decorator_RemainingH
 OpenAssetsAtExit=/Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer
 OpenAssetsAtExit=/Game/AdvancedAI/EQS_SecureCoverFinding.EQS_SecureCoverFinding
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFinding.EQS_CoverFinding
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4760,11 +4761,11 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/Task_AttackTarget
-MRUItem1=/Game/AdvancedAI/Task_SelfHeal
-MRUItem2=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem3=/Game/AdvancedAI/EQS_SecureCoverFinding
-MRUItem4=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem0=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem1=/Game/AdvancedAI/Task_AttackTarget
+MRUItem2=/Game/AdvancedAI/Task_SelfHeal
+MRUItem3=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem4=/Game/AdvancedAI/EQS_SecureCoverFinding
 MRUItem5=/Game/AdvancedAI/BT_AIPlayer
 MRUItem6=/Game/AdvancedAI/Decorator_DistanceTo
 MRUItem7=/Game/AdvancedAI/Decorator_ReaminingHealth
