Added a fire sound method.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.10-03.59.28
+CoopGame.TimeStamp=2020.05.10-21.05.55
 CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4369,10 +4369,19 @@ EnvQueryTest_Pathfinding.Pathfinding=True
 EnvQueryTest_Pathfinding.Filter=True
 EnvQueryTest_Pathfinding.Score=True
 EnvQueryTest_Pathfinding.Preview=True
+REINST_BP_Shotgun_C_53.Tick=True
+REINST_BP_Shotgun_C_53.Weapon=True
+REINST_BP_Shotgun_C_53.Rendering=True
+REINST_BP_Shotgun_C_53.Replication=True
+REINST_BP_Shotgun_C_53.Input=True
+REINST_BP_Shotgun_C_53.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
+OpenAssetsAtExit=/Game/TrackerBot/Sounds/Explosion01_Cue.Explosion01_Cue
+OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_Shotgun.BP_Shotgun
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4756,26 +4765,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem1=/Game/AdvancedAI/Task_AttackTarget
-MRUItem2=/Game/AdvancedAI/Task_SelfHeal
-MRUItem3=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem4=/Game/AdvancedAI/EQS_SecureCoverFinding
-MRUItem5=/Game/AdvancedAI/BT_AIPlayer
-MRUItem6=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem7=/Game/AdvancedAI/Decorator_ReaminingHealth
-MRUItem8=/Game/AdvancedAI/NewBlueprint
-MRUItem9=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem10=/Game/Level/maps/VoidMap
-MRUItem11=/Game/Level/maps/Wimbledon
-MRUItem12=/Game/AdvancedAI/BP_AIPlayer
-MRUItem13=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem14=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem15=/Game/TrackerBot/BP_TrackerBot
-MRUItem16=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem17=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem18=/Game/Blueprints/Weapons/BP_AIMachineGun
-MRUItem19=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem0=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem1=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem2=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem3=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem4=/Game/TrackerBot/BP_TrackerBot
+MRUItem5=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem6=/Game/AdvancedAI/Task_AttackTarget
+MRUItem7=/Game/AdvancedAI/Task_SelfHeal
+MRUItem8=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem9=/Game/AdvancedAI/EQS_SecureCoverFinding
+MRUItem10=/Game/AdvancedAI/BT_AIPlayer
+MRUItem11=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem12=/Game/AdvancedAI/Decorator_ReaminingHealth
+MRUItem13=/Game/AdvancedAI/NewBlueprint
+MRUItem14=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem15=/Game/Level/maps/VoidMap
+MRUItem16=/Game/Level/maps/Wimbledon
+MRUItem17=/Game/AdvancedAI/BP_AIPlayer
+MRUItem18=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem19=/Game/Blueprints/Characters/BP_PlayerPawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
