Now reload sound sounds when reloading.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.10-21.12.33
-CoopGame.LastCompileMethod=External
+CoopGame.TimeStamp=2020.05.10-21.19.32
+CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -4375,9 +4375,15 @@ REINST_BP_Shotgun_C_53.Rendering=True
 REINST_BP_Shotgun_C_53.Replication=True
 REINST_BP_Shotgun_C_53.Input=True
 REINST_BP_Shotgun_C_53.Actor=True
+REINST_BP_Shotgun_C_77.Tick=True
+REINST_BP_Shotgun_C_77.Weapon=True
+REINST_BP_Shotgun_C_77.Rendering=True
+REINST_BP_Shotgun_C_77.Replication=True
+REINST_BP_Shotgun_C_77.Input=True
+REINST_BP_Shotgun_C_77.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -4762,26 +4768,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem0=/Game/Sounds/Shotgun_Reaload_Cue
 MRUItem1=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem2=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem3=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem4=/Game/TrackerBot/BP_TrackerBot
-MRUItem5=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem6=/Game/AdvancedAI/Task_AttackTarget
-MRUItem7=/Game/AdvancedAI/Task_SelfHeal
-MRUItem8=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem9=/Game/AdvancedAI/EQS_SecureCoverFinding
-MRUItem10=/Game/AdvancedAI/BT_AIPlayer
-MRUItem11=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem12=/Game/AdvancedAI/Decorator_ReaminingHealth
-MRUItem13=/Game/AdvancedAI/NewBlueprint
-MRUItem14=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem15=/Game/Level/maps/VoidMap
-MRUItem16=/Game/Level/maps/Wimbledon
-MRUItem17=/Game/AdvancedAI/BP_AIPlayer
-MRUItem18=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem19=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem2=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem3=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem4=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem5=/Game/TrackerBot/BP_TrackerBot
+MRUItem6=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem7=/Game/AdvancedAI/Task_AttackTarget
+MRUItem8=/Game/AdvancedAI/Task_SelfHeal
+MRUItem9=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem10=/Game/AdvancedAI/EQS_SecureCoverFinding
+MRUItem11=/Game/AdvancedAI/BT_AIPlayer
+MRUItem12=/Game/AdvancedAI/Decorator_DistanceTo
+MRUItem13=/Game/AdvancedAI/Decorator_ReaminingHealth
+MRUItem14=/Game/AdvancedAI/NewBlueprint
+MRUItem15=/Game/AdvancedAI/Service_SelectATargetActor
+MRUItem16=/Game/Level/maps/VoidMap
+MRUItem17=/Game/Level/maps/Wimbledon
+MRUItem18=/Game/AdvancedAI/BP_AIPlayer
+MRUItem19=/Game/Blueprints/GameModes/BP_TestGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
