--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.10-21.19.32
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.05.10-21.23.37
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -4381,10 +4381,104 @@ REINST_BP_Shotgun_C_77.Rendering=True
 REINST_BP_Shotgun_C_77.Replication=True
 REINST_BP_Shotgun_C_77.Input=True
 REINST_BP_Shotgun_C_77.Actor=True
+REINST_BP_MachineGun_C_27.TransformCommon=True
+REINST_BP_MachineGun_C_27.Animation=True
+REINST_BP_MachineGun_C_27.Mesh=True
+REINST_BP_MachineGun_C_27.Materials=True
+REINST_BP_MachineGun_C_27.Weapon=True
+REINST_BP_MachineGun_C_27.Tick=True
+REINST_BP_MachineGun_C_27.ComponentTick=True
+REINST_BP_MachineGun_C_27.Clothing=True
+REINST_BP_MachineGun_C_27.Physics=True
+REINST_BP_MachineGun_C_27.Collision=True
+REINST_BP_MachineGun_C_27.MasterPoseComponent=True
+REINST_BP_MachineGun_C_27.Lighting=True
+REINST_BP_MachineGun_C_27.ClothingSimulation=True
+REINST_BP_MachineGun_C_27.Rendering=True
+REINST_BP_MachineGun_C_27.Tags=True
+REINST_BP_MachineGun_C_27.ComponentReplication=True
+REINST_BP_MachineGun_C_27.Activation=True
+REINST_BP_MachineGun_C_27.Variable=True
+REINST_BP_MachineGun_C_27.Cooking=True
+REINST_BP_MachineGun_C_27.Replication=True
+REINST_BP_MachineGun_C_27.Input=True
+REINST_BP_MachineGun_C_27.Actor=True
+BP_MachineGun_AI_C.TransformCommon=True
+BP_MachineGun_AI_C.Animation=True
+BP_MachineGun_AI_C.Mesh=True
+BP_MachineGun_AI_C.Materials=True
+BP_MachineGun_AI_C.Weapon=True
+BP_MachineGun_AI_C.Tick=True
+BP_MachineGun_AI_C.ComponentTick=True
+BP_MachineGun_AI_C.Clothing=True
+BP_MachineGun_AI_C.Physics=True
+BP_MachineGun_AI_C.Collision=True
+BP_MachineGun_AI_C.MasterPoseComponent=True
+BP_MachineGun_AI_C.Lighting=True
+BP_MachineGun_AI_C.ClothingSimulation=True
+BP_MachineGun_AI_C.Rendering=True
+BP_MachineGun_AI_C.Tags=True
+BP_MachineGun_AI_C.ComponentReplication=True
+BP_MachineGun_AI_C.Activation=True
+BP_MachineGun_AI_C.Variable=True
+BP_MachineGun_AI_C.Cooking=True
+BP_MachineGun_AI_C.Replication=True
+BP_MachineGun_AI_C.Input=True
+BP_MachineGun_AI_C.Actor=True
+REINST_BP_MachineGun_AI_C_61.Tick=True
+REINST_BP_MachineGun_AI_C_61.Weapon=True
+REINST_BP_MachineGun_AI_C_61.Rendering=True
+REINST_BP_MachineGun_AI_C_61.Replication=True
+REINST_BP_MachineGun_AI_C_61.Input=True
+REINST_BP_MachineGun_AI_C_61.Actor=True
+SoundWave.Compression=True
+SoundWave.Streaming=True
+SoundWave.Quality=True
+SoundWave.Sound=True
+SoundWave.SoundWave=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Debug=True
+SoundWave.Concurrency=True
+SoundWave.Effects=True
+SoundWave.Priority=True
+SoundWave.Attenuation=True
+EditorKeyboardShortcutSettings.SoundCueGraphEditor=True
+REINST_BP_GrenadeLaucnher_C_77.Tick=True
+REINST_BP_GrenadeLaucnher_C_77.Projectile=True
+REINST_BP_GrenadeLaucnher_C_77.Weapon=True
+REINST_BP_GrenadeLaucnher_C_77.Rendering=True
+REINST_BP_GrenadeLaucnher_C_77.Replication=True
+REINST_BP_GrenadeLaucnher_C_77.Input=True
+REINST_BP_GrenadeLaucnher_C_77.Actor=True
+REINST_BP_GrenadeLaucnher_C_81.Tick=True
+REINST_BP_GrenadeLaucnher_C_81.Projectile=True
+REINST_BP_GrenadeLaucnher_C_81.Weapon=True
+REINST_BP_GrenadeLaucnher_C_81.Rendering=True
+REINST_BP_GrenadeLaucnher_C_81.Replication=True
+REINST_BP_GrenadeLaucnher_C_81.Input=True
+REINST_BP_GrenadeLaucnher_C_81.Actor=True
+REINST_BP_Rifle_C_85.Tick=True
+REINST_BP_Rifle_C_85.Weapon=True
+REINST_BP_Rifle_C_85.Rendering=True
+REINST_BP_Rifle_C_85.Replication=True
+REINST_BP_Rifle_C_85.Input=True
+REINST_BP_Rifle_C_85.Actor=True
+REINST_BP_Rifle_C_89.Tick=True
+REINST_BP_Rifle_C_89.Weapon=True
+REINST_BP_Rifle_C_89.Rendering=True
+REINST_BP_Rifle_C_89.Replication=True
+REINST_BP_Rifle_C_89.Input=True
+REINST_BP_Rifle_C_89.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Sounds/Rifle_shot_Cue.Rifle_shot_Cue
+OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_Rifle.BP_Rifle
+OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4578,9 +4672,9 @@ Decorator_RemainingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPa
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 Object=
-BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_PlayerPawn_C=
+SCharacter=
+Character=
 Pawn=
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -4768,26 +4862,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sounds/Shotgun_Reaload_Cue
-MRUItem1=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem2=/Game/Sounds/Shotgun_Gunshot_Cue
-MRUItem3=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem4=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem5=/Game/TrackerBot/BP_TrackerBot
-MRUItem6=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem7=/Game/AdvancedAI/Task_AttackTarget
-MRUItem8=/Game/AdvancedAI/Task_SelfHeal
-MRUItem9=/Game/AdvancedAI/EnvQueryContext_FindTarget
-MRUItem10=/Game/AdvancedAI/EQS_SecureCoverFinding
-MRUItem11=/Game/AdvancedAI/BT_AIPlayer
-MRUItem12=/Game/AdvancedAI/Decorator_DistanceTo
-MRUItem13=/Game/AdvancedAI/Decorator_ReaminingHealth
-MRUItem14=/Game/AdvancedAI/NewBlueprint
-MRUItem15=/Game/AdvancedAI/Service_SelectATargetActor
-MRUItem16=/Game/Level/maps/VoidMap
-MRUItem17=/Game/Level/maps/Wimbledon
-MRUItem18=/Game/AdvancedAI/BP_AIPlayer
-MRUItem19=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem0=/Game/Sounds/Rifle_shot_Cue
+MRUItem1=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem3=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem4=/Game/Sounds/machinegun_shot_Cue
+MRUItem5=/Game/Sounds/machinegun_shot
+MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem7=/Game/Sounds/Shotgun_Reaload_Cue
+MRUItem8=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem9=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem10=/Game/AdvancedAI/BP_MachineGun_AI
+MRUItem11=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem12=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem13=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem14=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem15=/Game/TrackerBot/BP_TrackerBot
+MRUItem16=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem17=/Game/AdvancedAI/Task_AttackTarget
+MRUItem18=/Game/AdvancedAI/Task_SelfHeal
+MRUItem19=/Game/AdvancedAI/EnvQueryContext_FindTarget
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4883,6 +4977,8 @@ MRUItem19=/Game/Blueprints/GameModes/BP_TestGameMode
 /Game/AdvancedAI/NewBlueprint.NewBlueprint=0
 /Game/AdvancedAI/Task_AttackTarget.Task_AttackTarget=0
 /Game/AdvancedAI/Task_SelfHeal.Task_SelfHeal=0
+/Game/Sounds/machinegun_shot_Cue.machinegun_shot_Cue=0
+/Game/Sounds/machinegun_shot.machinegun_shot=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
