--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4472,13 +4472,35 @@ REINST_BP_Rifle_C_89.Rendering=True
 REINST_BP_Rifle_C_89.Replication=True
 REINST_BP_Rifle_C_89.Input=True
 REINST_BP_Rifle_C_89.Actor=True
+REINST_BP_Shotgun_C_27.Tick=True
+REINST_BP_Shotgun_C_27.Weapon=True
+REINST_BP_Shotgun_C_27.Rendering=True
+REINST_BP_Shotgun_C_27.Replication=True
+REINST_BP_Shotgun_C_27.Input=True
+REINST_BP_Shotgun_C_27.Actor=True
+REINST_BP_MachineGun_C_31.TransformCommon=True
+REINST_BP_MachineGun_C_31.Animation=True
+REINST_BP_MachineGun_C_31.Mesh=True
+REINST_BP_MachineGun_C_31.Materials=True
+REINST_BP_MachineGun_C_31.ComponentTick=True
+REINST_BP_MachineGun_C_31.Clothing=True
+REINST_BP_MachineGun_C_31.Physics=True
+REINST_BP_MachineGun_C_31.Collision=True
+REINST_BP_MachineGun_C_31.MasterPoseComponent=True
+REINST_BP_MachineGun_C_31.Lighting=True
+REINST_BP_MachineGun_C_31.ClothingSimulation=True
+REINST_BP_MachineGun_C_31.Tags=True
+REINST_BP_MachineGun_C_31.ComponentReplication=True
+REINST_BP_MachineGun_C_31.Activation=True
+REINST_BP_MachineGun_C_31.Variable=True
+REINST_BP_MachineGun_C_31.Cooking=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Sounds/Rifle_shot_Cue.Rifle_shot_Cue
-OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_Rifle.BP_Rifle
-OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
+OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_Shotgun.BP_Shotgun
+OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_MachineGun.BP_MachineGun
+OpenAssetsAtExit=/Game/Sounds/machinegun_shot_Cue.machinegun_shot_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4511,7 +4533,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4862,26 +4884,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sounds/Rifle_shot_Cue
-MRUItem1=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem3=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem4=/Game/Sounds/machinegun_shot_Cue
-MRUItem5=/Game/Sounds/machinegun_shot
-MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem7=/Game/Sounds/Shotgun_Reaload_Cue
-MRUItem8=/Game/Sounds/Shotgun_Gunshot_Cue
-MRUItem9=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem10=/Game/AdvancedAI/BP_MachineGun_AI
-MRUItem11=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem12=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem13=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem14=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem15=/Game/TrackerBot/BP_TrackerBot
-MRUItem16=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem17=/Game/AdvancedAI/Task_AttackTarget
-MRUItem18=/Game/AdvancedAI/Task_SelfHeal
-MRUItem19=/Game/AdvancedAI/EnvQueryContext_FindTarget
+MRUItem0=/Game/Sounds/Shotgun_shot_Cue
+MRUItem1=/Game/Sounds/machinegun_shot_Cue
+MRUItem2=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem3=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem4=/Game/Sounds/Rifle_shot_Cue
+MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem6=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem7=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem8=/Game/Sounds/machinegun_shot
+MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem10=/Game/Sounds/Shotgun_Reaload_Cue
+MRUItem11=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem12=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem13=/Game/AdvancedAI/BP_MachineGun_AI
+MRUItem14=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem15=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem16=/Game/TrackerBot/BP_TrackerBot
+MRUItem17=/Game/AdvancedAI/EQS_CoverFinding
+MRUItem18=/Game/AdvancedAI/Task_AttackTarget
+MRUItem19=/Game/AdvancedAI/Task_SelfHeal
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
