--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4494,13 +4494,27 @@ REINST_BP_MachineGun_C_31.ComponentReplication=True
 REINST_BP_MachineGun_C_31.Activation=True
 REINST_BP_MachineGun_C_31.Variable=True
 REINST_BP_MachineGun_C_31.Cooking=True
+REINST_BP_Rifle_C_65.Tick=True
+REINST_BP_Rifle_C_65.Weapon=True
+REINST_BP_Rifle_C_65.Rendering=True
+REINST_BP_Rifle_C_65.Replication=True
+REINST_BP_Rifle_C_65.Input=True
+REINST_BP_Rifle_C_65.Actor=True
+REINST_BP_GrenadeLaucnher_C_69.Tick=True
+REINST_BP_GrenadeLaucnher_C_69.Projectile=True
+REINST_BP_GrenadeLaucnher_C_69.Weapon=True
+REINST_BP_GrenadeLaucnher_C_69.Rendering=True
+REINST_BP_GrenadeLaucnher_C_69.Replication=True
+REINST_BP_GrenadeLaucnher_C_69.Input=True
+REINST_BP_GrenadeLaucnher_C_69.Actor=True
+BP_ExplosiveBarrel_C.Player=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_Shotgun.BP_Shotgun
-OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_MachineGun.BP_MachineGun
-OpenAssetsAtExit=/Game/Sounds/machinegun_shot_Cue.machinegun_shot_Cue
+OpenAssetsAtExit=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel
+OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
+OpenAssetsAtExit=/Game/Sounds/Grenade_Launcher_shot_Cue.Grenade_Launcher_shot_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4533,7 +4547,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4884,26 +4898,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sounds/Shotgun_shot_Cue
-MRUItem1=/Game/Sounds/machinegun_shot_Cue
-MRUItem2=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem3=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem4=/Game/Sounds/Rifle_shot_Cue
-MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem6=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem7=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem8=/Game/Sounds/machinegun_shot
-MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem10=/Game/Sounds/Shotgun_Reaload_Cue
-MRUItem11=/Game/Sounds/Shotgun_Gunshot_Cue
-MRUItem12=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem13=/Game/AdvancedAI/BP_MachineGun_AI
-MRUItem14=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem15=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem16=/Game/TrackerBot/BP_TrackerBot
-MRUItem17=/Game/AdvancedAI/EQS_CoverFinding
-MRUItem18=/Game/AdvancedAI/Task_AttackTarget
-MRUItem19=/Game/AdvancedAI/Task_SelfHeal
+MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem1=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem2=/Game/Sounds/Grenade_Launcher_shot_Cue
+MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem4=/Game/Sounds/Rifle_reload_Cue
+MRUItem5=/Game/Sounds/Shotgun_shot_Cue
+MRUItem6=/Game/Sounds/machinegun_shot_Cue
+MRUItem7=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem8=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem9=/Game/Sounds/Rifle_shot_Cue
+MRUItem10=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem11=/Game/Sounds/machinegun_shot
+MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem13=/Game/Sounds/Shotgun_Reaload_Cue
+MRUItem14=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem15=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem16=/Game/AdvancedAI/BP_MachineGun_AI
+MRUItem17=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem18=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem19=/Game/TrackerBot/BP_TrackerBot
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
