--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.10-21.23.37
+CoopGame.TimeStamp=2020.05.11-02.45.11
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4510,11 +4510,9 @@ REINST_BP_GrenadeLaucnher_C_69.Actor=True
 BP_ExplosiveBarrel_C.Player=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel
-OpenAssetsAtExit=/Game/Blueprints/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
-OpenAssetsAtExit=/Game/Sounds/Grenade_Launcher_shot_Cue.Grenade_Launcher_shot_Cue
+OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4547,7 +4545,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Projectiles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4898,17 +4896,17 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem1=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem2=/Game/Sounds/Grenade_Launcher_shot_Cue
-MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem4=/Game/Sounds/Rifle_reload_Cue
-MRUItem5=/Game/Sounds/Shotgun_shot_Cue
-MRUItem6=/Game/Sounds/machinegun_shot_Cue
-MRUItem7=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem8=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem9=/Game/Sounds/Rifle_shot_Cue
-MRUItem10=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem0=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem1=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem3=/Game/Sounds/Grenade_Launcher_shot_Cue
+MRUItem4=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem5=/Game/Sounds/Rifle_reload_Cue
+MRUItem6=/Game/Sounds/Shotgun_shot_Cue
+MRUItem7=/Game/Sounds/machinegun_shot_Cue
+MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem9=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem10=/Game/Sounds/Rifle_shot_Cue
 MRUItem11=/Game/Sounds/machinegun_shot
 MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
 MRUItem13=/Game/Sounds/Shotgun_Reaload_Cue
