--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-02.45.11
-CoopGame.LastCompileMethod=External
+CoopGame.TimeStamp=2020.05.11-02.46.32
+CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -4508,11 +4508,65 @@ REINST_BP_GrenadeLaucnher_C_69.Replication=True
 REINST_BP_GrenadeLaucnher_C_69.Input=True
 REINST_BP_GrenadeLaucnher_C_69.Actor=True
 BP_ExplosiveBarrel_C.Player=True
+BP_GrenadeProjectile_C.Destruction=True
+REINST_BP_GrenadeProjectile_C_57.TransformCommon=True
+REINST_BP_GrenadeProjectile_C_57.StaticMesh=True
+REINST_BP_GrenadeProjectile_C_57.Materials=True
+REINST_BP_GrenadeProjectile_C_57.Explosion=True
+REINST_BP_GrenadeProjectile_C_57.Tick=True
+REINST_BP_GrenadeProjectile_C_57.Projectile=True
+REINST_BP_GrenadeProjectile_C_57.ComponentTick=True
+REINST_BP_GrenadeProjectile_C_57.Destruction=True
+REINST_BP_GrenadeProjectile_C_57.Shape=True
+REINST_BP_GrenadeProjectile_C_57.Physics=True
+REINST_BP_GrenadeProjectile_C_57.Navigation=True
+REINST_BP_GrenadeProjectile_C_57.Collision=True
+REINST_BP_GrenadeProjectile_C_57.Lighting=True
+REINST_BP_GrenadeProjectile_C_57.Rendering=True
+REINST_BP_GrenadeProjectile_C_57.Tags=True
+REINST_BP_GrenadeProjectile_C_57.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_57.Variable=True
+REINST_BP_GrenadeProjectile_C_57.Cooking=True
+REINST_BP_GrenadeProjectile_C_57.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_57.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_57.Homing=True
+REINST_BP_GrenadeProjectile_C_57.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_57.Velocity=True
+REINST_BP_GrenadeProjectile_C_57.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_57.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_57.Activation=True
+REINST_BP_GrenadeProjectile_C_57.Replication=True
+REINST_BP_GrenadeProjectile_C_57.Input=True
+REINST_BP_GrenadeProjectile_C_57.Actor=True
+REINST_BP_Shotgun_C_61.TransformCommon=True
+REINST_BP_Shotgun_C_61.Animation=True
+REINST_BP_Shotgun_C_61.Mesh=True
+REINST_BP_Shotgun_C_61.Materials=True
+REINST_BP_Shotgun_C_61.Weapon=True
+REINST_BP_Shotgun_C_61.Tick=True
+REINST_BP_Shotgun_C_61.ComponentTick=True
+REINST_BP_Shotgun_C_61.Clothing=True
+REINST_BP_Shotgun_C_61.Physics=True
+REINST_BP_Shotgun_C_61.Collision=True
+REINST_BP_Shotgun_C_61.MasterPoseComponent=True
+REINST_BP_Shotgun_C_61.Lighting=True
+REINST_BP_Shotgun_C_61.ClothingSimulation=True
+REINST_BP_Shotgun_C_61.Rendering=True
+REINST_BP_Shotgun_C_61.Tags=True
+REINST_BP_Shotgun_C_61.ComponentReplication=True
+REINST_BP_Shotgun_C_61.Activation=True
+REINST_BP_Shotgun_C_61.Variable=True
+REINST_BP_Shotgun_C_61.Cooking=True
+REINST_BP_Shotgun_C_61.Replication=True
+REINST_BP_Shotgun_C_61.Input=True
+REINST_BP_Shotgun_C_61.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile
+OpenAssetsAtExit=/Game/Weapons/SK_Shotgun.SK_Shotgun
+OpenAssetsAtExit=/Game/Weapons/SK_Rifle.SK_Rifle
+OpenAssetsAtExit=/Game/Materials/M_RifleBody.M_RifleBody
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4545,7 +4599,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Projectiles
+ContentBrowserTab1.SelectedPaths=/Game/Weapons
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4896,26 +4950,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem1=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem2=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem3=/Game/Sounds/Grenade_Launcher_shot_Cue
-MRUItem4=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem5=/Game/Sounds/Rifle_reload_Cue
-MRUItem6=/Game/Sounds/Shotgun_shot_Cue
-MRUItem7=/Game/Sounds/machinegun_shot_Cue
-MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem9=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem10=/Game/Sounds/Rifle_shot_Cue
-MRUItem11=/Game/Sounds/machinegun_shot
-MRUItem12=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem13=/Game/Sounds/Shotgun_Reaload_Cue
-MRUItem14=/Game/Sounds/Shotgun_Gunshot_Cue
-MRUItem15=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem16=/Game/AdvancedAI/BP_MachineGun_AI
-MRUItem17=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem18=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem19=/Game/TrackerBot/BP_TrackerBot
+MRUItem0=/Game/Weapons/SK_Rifle
+MRUItem1=/Game/Materials/M_RifleBody
+MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem3=/Game/Materials/M_ShotgunBody
+MRUItem4=/Game/Materials/M_Shotgun
+MRUItem5=/Game/Weapons/SK_Shotgun
+MRUItem6=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem8=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem9=/Game/Sounds/Grenade_Launcher_shot_Cue
+MRUItem10=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem11=/Game/Sounds/Rifle_reload_Cue
+MRUItem12=/Game/Sounds/Shotgun_shot_Cue
+MRUItem13=/Game/Sounds/machinegun_shot_Cue
+MRUItem14=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem15=/Game/Sounds/Rifle_shot_Cue
+MRUItem16=/Game/Sounds/machinegun_shot
+MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem18=/Game/Sounds/Shotgun_Reaload_Cue
+MRUItem19=/Game/Sounds/Shotgun_Gunshot_Cue
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5013,6 +5067,8 @@ MRUItem19=/Game/TrackerBot/BP_TrackerBot
 /Game/AdvancedAI/Task_SelfHeal.Task_SelfHeal=0
 /Game/Sounds/machinegun_shot_Cue.machinegun_shot_Cue=0
 /Game/Sounds/machinegun_shot.machinegun_shot=0
+/Game/Materials/M_Shotgun.M_Shotgun=0
+/Game/Materials/M_ShotgunBody.M_ShotgunBody=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
