Created audio component and method for when a player walks. Should this be in blueprint?

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4562,11 +4562,11 @@ REINST_BP_Shotgun_C_61.Input=True
 REINST_BP_Shotgun_C_61.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Weapons/SK_Shotgun.SK_Shotgun
-OpenAssetsAtExit=/Game/Weapons/SK_Rifle.SK_Rifle
-OpenAssetsAtExit=/Game/Materials/M_RifleBody.M_RifleBody
+OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
+OpenAssetsAtExit=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn
+OpenAssetsAtExit=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4718,7 +4718,7 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
-K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
@@ -4778,8 +4778,8 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -4950,26 +4950,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Weapons/SK_Rifle
-MRUItem1=/Game/Materials/M_RifleBody
-MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem3=/Game/Materials/M_ShotgunBody
-MRUItem4=/Game/Materials/M_Shotgun
-MRUItem5=/Game/Weapons/SK_Shotgun
-MRUItem6=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem8=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem9=/Game/Sounds/Grenade_Launcher_shot_Cue
-MRUItem10=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem11=/Game/Sounds/Rifle_reload_Cue
-MRUItem12=/Game/Sounds/Shotgun_shot_Cue
-MRUItem13=/Game/Sounds/machinegun_shot_Cue
-MRUItem14=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem15=/Game/Sounds/Rifle_shot_Cue
-MRUItem16=/Game/Sounds/machinegun_shot
-MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem18=/Game/Sounds/Shotgun_Reaload_Cue
-MRUItem19=/Game/Sounds/Shotgun_Gunshot_Cue
+MRUItem0=/Game/TrackerBot/BP_TrackerBot
+MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem2=/Game/AdvancedAI/BP_AIPlayer
+MRUItem3=/Game/Weapons/SK_Rifle
+MRUItem4=/Game/Materials/M_RifleBody
+MRUItem5=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem6=/Game/Materials/M_ShotgunBody
+MRUItem7=/Game/Materials/M_Shotgun
+MRUItem8=/Game/Weapons/SK_Shotgun
+MRUItem9=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem10=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem11=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
+MRUItem12=/Game/Sounds/Grenade_Launcher_shot_Cue
+MRUItem13=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem14=/Game/Sounds/Rifle_reload_Cue
+MRUItem15=/Game/Sounds/Shotgun_shot_Cue
+MRUItem16=/Game/Sounds/machinegun_shot_Cue
+MRUItem17=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem18=/Game/Sounds/Rifle_shot_Cue
+MRUItem19=/Game/Sounds/machinegun_shot
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
