Added ability to barrel to emit sound at explosion.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4753,11 +4753,9 @@ K2Node_VariableGet.AttenuationListenerFocus=True
 K2Node_VariableGet.AttenuationOcclusion=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Characters/BP_PlayerPawn.BP_PlayerPawn
-OpenAssetsAtExit=/Game/Objects/Characters/BP_AIPlayer.BP_AIPlayer
-OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue.grenade_launcher_reload_Cue
+OpenAssetsAtExit=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
