assigned a sound to each weapon when the magazine empties.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-20.29.13
+CoopGame.TimeStamp=2020.05.11-20.42.51
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4759,10 +4759,70 @@ REINST_BP_ExplosiveBarrel_C_27.Rendering=True
 REINST_BP_ExplosiveBarrel_C_27.Replication=True
 REINST_BP_ExplosiveBarrel_C_27.Input=True
 REINST_BP_ExplosiveBarrel_C_27.Actor=True
+REINST_BP_Rifle_C_35.TransformCommon=True
+REINST_BP_Rifle_C_35.Animation=True
+REINST_BP_Rifle_C_35.Mesh=True
+REINST_BP_Rifle_C_35.Materials=True
+REINST_BP_Rifle_C_35.ComponentTick=True
+REINST_BP_Rifle_C_35.Clothing=True
+REINST_BP_Rifle_C_35.Physics=True
+REINST_BP_Rifle_C_35.Collision=True
+REINST_BP_Rifle_C_35.MasterPoseComponent=True
+REINST_BP_Rifle_C_35.Lighting=True
+REINST_BP_Rifle_C_35.ClothingSimulation=True
+REINST_BP_Rifle_C_35.Tags=True
+REINST_BP_Rifle_C_35.ComponentReplication=True
+REINST_BP_Rifle_C_35.Activation=True
+REINST_BP_Rifle_C_35.Variable=True
+REINST_BP_Rifle_C_35.Cooking=True
+REINST_BP_Shotgun_C_39.TransformCommon=True
+REINST_BP_Shotgun_C_39.Animation=True
+REINST_BP_Shotgun_C_39.Mesh=True
+REINST_BP_Shotgun_C_39.Materials=True
+REINST_BP_Shotgun_C_39.ComponentTick=True
+REINST_BP_Shotgun_C_39.Clothing=True
+REINST_BP_Shotgun_C_39.Physics=True
+REINST_BP_Shotgun_C_39.Collision=True
+REINST_BP_Shotgun_C_39.MasterPoseComponent=True
+REINST_BP_Shotgun_C_39.Lighting=True
+REINST_BP_Shotgun_C_39.ClothingSimulation=True
+REINST_BP_Shotgun_C_39.Tags=True
+REINST_BP_Shotgun_C_39.ComponentReplication=True
+REINST_BP_Shotgun_C_39.Activation=True
+REINST_BP_Shotgun_C_39.Variable=True
+REINST_BP_Shotgun_C_39.Cooking=True
+REINST_BP_MachineGun_AI_C_73.TransformCommon=True
+REINST_BP_MachineGun_AI_C_73.Animation=True
+REINST_BP_MachineGun_AI_C_73.Mesh=True
+REINST_BP_MachineGun_AI_C_73.Materials=True
+REINST_BP_MachineGun_AI_C_73.Weapon=True
+REINST_BP_MachineGun_AI_C_73.Tick=True
+REINST_BP_MachineGun_AI_C_73.ComponentTick=True
+REINST_BP_MachineGun_AI_C_73.Clothing=True
+REINST_BP_MachineGun_AI_C_73.Physics=True
+REINST_BP_MachineGun_AI_C_73.Collision=True
+REINST_BP_MachineGun_AI_C_73.MasterPoseComponent=True
+REINST_BP_MachineGun_AI_C_73.Lighting=True
+REINST_BP_MachineGun_AI_C_73.ClothingSimulation=True
+REINST_BP_MachineGun_AI_C_73.Rendering=True
+REINST_BP_MachineGun_AI_C_73.Tags=True
+REINST_BP_MachineGun_AI_C_73.ComponentReplication=True
+REINST_BP_MachineGun_AI_C_73.Activation=True
+REINST_BP_MachineGun_AI_C_73.Variable=True
+REINST_BP_MachineGun_AI_C_73.Cooking=True
+REINST_BP_MachineGun_AI_C_73.Replication=True
+REINST_BP_MachineGun_AI_C_73.Input=True
+REINST_BP_MachineGun_AI_C_73.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/magazine_empty_Cue.magazine_empty_Cue
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_MachineGun.BP_MachineGun
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_Rifle.BP_Rifle
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_Shotgun.BP_Shotgun
+OpenAssetsAtExit=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI.BP_MachineGun_AI
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4795,7 +4855,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Miscellaneous/ExplosiveBarrel
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters/AIPlayer
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5154,26 +5214,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem1=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
-MRUItem2=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
-MRUItem3=/Game/Objects/Characters/Sounds/Jog-loop_Cue
-MRUItem4=/Game/Objects/Characters/BP_AIPlayer
-MRUItem5=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem6=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem7=/Game/Objects/Weapons/BP_MachineGun
-MRUItem8=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem9=/Game/Objects/Weapons/BP_Rifle
-MRUItem10=/Game/Objects/Weapons/BP_Shotgun
-MRUItem11=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem12=/Game/Blueprints/Characters/BP_AIPlayer
-MRUItem13=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem14=/Game/AdvancedAI/BP_AIPlayer
-MRUItem15=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem16=/Game/TrackerBot/BP_TrackerBot
-MRUItem17=/Game/Sounds/Jog-loop
-MRUItem18=/Game/TrackerBot/Sounds/ball_roll_04_loop
-MRUItem19=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem0=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem1=/Game/Objects/Weapons/BP_Shotgun
+MRUItem2=/Game/Objects/Weapons/BP_Rifle
+MRUItem3=/Game/Objects/Weapons/BP_MachineGun
+MRUItem4=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem5=/Game/Objects/Weapons/Sounds/magazine_empty_Cue
+MRUItem6=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem7=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
+MRUItem8=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
+MRUItem9=/Game/Objects/Characters/Sounds/Jog-loop_Cue
+MRUItem10=/Game/Objects/Characters/BP_AIPlayer
+MRUItem11=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem12=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem13=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem14=/Game/Blueprints/Characters/BP_AIPlayer
+MRUItem15=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem16=/Game/AdvancedAI/BP_AIPlayer
+MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem18=/Game/TrackerBot/BP_TrackerBot
+MRUItem19=/Game/Sounds/Jog-loop
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
