weapon's hasAmmoInMagazine now callable via blueprints.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4813,16 +4813,33 @@ REINST_BP_MachineGun_AI_C_73.Cooking=True
 REINST_BP_MachineGun_AI_C_73.Replication=True
 REINST_BP_MachineGun_AI_C_73.Input=True
 REINST_BP_MachineGun_AI_C_73.Actor=True
+REINST_BP_MachineGun_AI_C_27.TransformCommon=True
+REINST_BP_MachineGun_AI_C_27.Animation=True
+REINST_BP_MachineGun_AI_C_27.Mesh=True
+REINST_BP_MachineGun_AI_C_27.Materials=True
+REINST_BP_MachineGun_AI_C_27.Weapon=True
+REINST_BP_MachineGun_AI_C_27.Tick=True
+REINST_BP_MachineGun_AI_C_27.ComponentTick=True
+REINST_BP_MachineGun_AI_C_27.Clothing=True
+REINST_BP_MachineGun_AI_C_27.Physics=True
+REINST_BP_MachineGun_AI_C_27.Collision=True
+REINST_BP_MachineGun_AI_C_27.MasterPoseComponent=True
+REINST_BP_MachineGun_AI_C_27.Lighting=True
+REINST_BP_MachineGun_AI_C_27.ClothingSimulation=True
+REINST_BP_MachineGun_AI_C_27.Rendering=True
+REINST_BP_MachineGun_AI_C_27.Tags=True
+REINST_BP_MachineGun_AI_C_27.ComponentReplication=True
+REINST_BP_MachineGun_AI_C_27.Activation=True
+REINST_BP_MachineGun_AI_C_27.Variable=True
+REINST_BP_MachineGun_AI_C_27.Cooking=True
+REINST_BP_MachineGun_AI_C_27.Replication=True
+REINST_BP_MachineGun_AI_C_27.Input=True
+REINST_BP_MachineGun_AI_C_27.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/magazine_empty_Cue.magazine_empty_Cue
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_MachineGun.BP_MachineGun
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_Rifle.BP_Rifle
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_Shotgun.BP_Shotgun
-OpenAssetsAtExit=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI.BP_MachineGun_AI
+OpenAssetsAtExit=/Game/Objects/Characters/AIPlayer/Task_AttackTarget.Task_AttackTarget
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5214,26 +5231,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem1=/Game/Objects/Weapons/BP_Shotgun
-MRUItem2=/Game/Objects/Weapons/BP_Rifle
-MRUItem3=/Game/Objects/Weapons/BP_MachineGun
-MRUItem4=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem5=/Game/Objects/Weapons/Sounds/magazine_empty_Cue
-MRUItem6=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem7=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
-MRUItem8=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
-MRUItem9=/Game/Objects/Characters/Sounds/Jog-loop_Cue
-MRUItem10=/Game/Objects/Characters/BP_AIPlayer
-MRUItem11=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem12=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem13=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem14=/Game/Blueprints/Characters/BP_AIPlayer
-MRUItem15=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem16=/Game/AdvancedAI/BP_AIPlayer
-MRUItem17=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem18=/Game/TrackerBot/BP_TrackerBot
-MRUItem19=/Game/Sounds/Jog-loop
+MRUItem0=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
+MRUItem1=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
+MRUItem2=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem3=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem4=/Game/Objects/Weapons/BP_Shotgun
+MRUItem5=/Game/Objects/Weapons/BP_Rifle
+MRUItem6=/Game/Objects/Weapons/BP_MachineGun
+MRUItem7=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem8=/Game/Objects/Weapons/Sounds/magazine_empty_Cue
+MRUItem9=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem10=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
+MRUItem11=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
+MRUItem12=/Game/Objects/Characters/Sounds/Jog-loop_Cue
+MRUItem13=/Game/Objects/Characters/BP_AIPlayer
+MRUItem14=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem15=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem16=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem17=/Game/Blueprints/Characters/BP_AIPlayer
+MRUItem18=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem19=/Game/AdvancedAI/BP_AIPlayer
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5341,6 +5358,10 @@ MRUItem19=/Game/Sounds/Jog-loop
 /Game/Objects/Characters/Sounds/Jog-loop_Cue.Jog-loop_Cue=0
 /Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue.Machine_Gun_reload_Cue=0
 /Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel=0
+/Game/Objects/Characters/AIPlayer/BT_AIPlayer.BT_AIPlayer=0
+/Game/Objects/Characters/AIPlayer/BB_AIPlayer.BB_AIPlayer=0
+/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI.BP_MachineGun_AI=0
+/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor.Service_SelectATargetActor=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
